--- a/client/src/styles/UnauthHero.css
+++ b/client/src/styles/UnauthHero.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 56px); /* Adjust based on navbar height */
+    min-height: calc(100vh - 40px); /* Adjust based on navbar height */
+    margin-top: 5rem;
     padding: 2rem;
 }
 
